welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:3: error: ')' expected but 'else' found.
  else if (a==b && a==c && b==c) {return 20}
  ^